# gst-camera

./: .gitignore  CMakeLists.txt  README.md  main.cpp
